feat: Sistema completo de multi-tenancy, admin, pricing e monitoramento
- Implementado sistema de autenticação completo (login, registro, recuperação de senha)
- Multi-tenancy: cada usuário tem seus próprios projetos, servidores e bancos
- Painel super admin com dashboard, gerenciamento de usuários e planos
- Sistema de planos de assinatura (Starter, Professional, Enterprise)
- Página de pricing com calculadora interativa
- Terminal SSH integrado para executar comandos em servidores e containers
- Sistema de monitoramento em tempo real (CPU, RAM, Disco, Rede, Processos)
- Listagem de containers Docker gerenciados
- Proteção de rotas com middleware de autenticação
- Melhorias na UI/UX com dark mode
- Correções de bugs e otimizações de performance

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ MONGODB_URI=mongodb://localhost:27017/deploy-manager
 JWT_SECRET=your-secret-key-here
 PROJECTS_DIR=/var/www/projects
 NODE_ENV=development
+
+# GitHub OAuth
+GITHUB_CLIENT_ID=your_github_client_id
+GITHUB_CLIENT_SECRET=your_github_client_secret
+GITHUB_REDIRECT_URI=http://localhost:3000/auth/github/callback
