--- a/package.json
+++ b/package.json
@@ -11,26 +11,37 @@
     "seed-plans": "node scripts/seed-plans.js"
   },
   "dependencies": {
+    "archiver": "^6.0.1",
     "axios": "^1.13.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dockerode": "^4.0.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.1",
+    "mime-types": "^2.1.35",
+    "minio": "^8.0.6",
     "mongoose": "^8.14.1",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^4.2.1",
     "node-ssh": "^13.1.0",
     "simple-git": "^3.25.0",
     "socket.io": "^4.8.1",
-    "ssh2": "^1.15.0"
+    "ssh2": "^1.15.0",
+    "ssh2-sftp-client": "^10.0.3"
   },
   "devDependencies": {
+    "@types/archiver": "^6.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/dockerode": "^4.0.1",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/mime-types": "^2.1.4",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.15.3",
     "@types/node-cron": "^3.0.11",
     "ts-node-dev": "^2.0.0",
