feat: adicionar botão de editar projeto e documentação de domínios customizados
- Adicionar botão de editar projeto no ServiceItem
- Criar modal EditProjectModal para editar configurações
- Melhorar rota PUT /projects/:id com validações
- Corrigir erro de sintaxe no DatabaseService (await em função não async)
- Adicionar documentação completa sobre domínios customizados
- Criar script de diagnóstico check-domain-config.sh
- Documentar diferença entre domínios automáticos (sslip.io) e customizados
- Adicionar troubleshooting para problemas comuns de DNS

--- a/package.json
+++ b/package.json
@@ -12,10 +12,21 @@
     "docker:logs": "docker-compose logs -f",
     "docker:rebuild": "docker-compose up -d --build"
   },
-  "keywords": ["deploy", "manager", "git", "automation", "devops"],
+  "keywords": [
+    "deploy",
+    "manager",
+    "git",
+    "automation",
+    "devops"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "concurrently": "^8.2.2"
+  },
+  "dependencies": {
+    "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.1",
+    "helmet": "^8.1.0"
   }
 }
