--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,25 @@
-PORT=5000
-MONGODB_URI=mongodb://localhost:27017/deploy-manager
-JWT_SECRET=your-secret-key-here
-PROJECTS_DIR=/var/www/projects
+# Servidor
+PORT=8001
 NODE_ENV=development
 
-# GitHub OAuth
+# Banco de Dados
+MONGODB_URI=mongodb://localhost:27017/deploy-manager
+
+# Segurança (IMPORTANTE: Alterar em produção!)
+JWT_SECRET=your-secret-key-here-change-in-production
+ENCRYPTION_KEY=your-32-character-secret-key!!
+
+# Diretórios
+PROJECTS_DIR=/var/www/projects
+
+# Domínio e IP
+BASE_DOMAIN=sslip.io
+SERVER_IP=localhost
+
+# GitHub OAuth (para conectar repositórios)
 GITHUB_CLIENT_ID=your_github_client_id
 GITHUB_CLIENT_SECRET=your_github_client_secret
-GITHUB_REDIRECT_URI=http://localhost:3000/auth/github/callback
+
+# URLs do Frontend
+FRONTEND_URL=http://localhost:8000
+GITHUB_CALLBACK_URL=http://localhost:8000/auth/github/callback
