--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,15 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@monaco-editor/react": "^4.6.0",
     "axios": "^1.7.9",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.469.0",
     "next": "^15.4.4",
     "react": "^18.3.1",
+    "react-contexify": "^6.0.0",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.5.2",
     "socket.io-client": "^4.8.3",
     "zustand": "^5.0.6"
