feat: Add automatic domain with sslip.io and system update feature
- Added Traefik labels to frontend service for automatic domain (deploy-manager.IP.sslip.io)
- Implemented system info endpoint (GET /admin/system-info) showing version, git info, uptime
- Implemented update system endpoint (POST /admin/update) to update from GitHub
- Updated admin settings page with system version display and update button
- Shows: version, git branch, commit, last update, uptime, Node.js version
- Update process: backup .env, git pull, install deps, rebuild containers, restart
- Updated install.sh to show both access URLs (direct and via Traefik)
- Updated README with system update and automatic domain documentation
- Created SYSTEM-UPDATE-FEATURE.md with complete documentation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,8 +68,15 @@ services:
       - /app/.next
     networks:
       - deploy-manager-network
+      - coolify
     ports:
       - "8000:3000"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.deploy-manager.rule=Host(`deploy-manager.${SERVER_IP:-localhost}.sslip.io`)"
+      - "traefik.http.routers.deploy-manager.entrypoints=web"
+      - "traefik.http.services.deploy-manager.loadbalancer.server.port=3000"
+      - "traefik.docker.network=coolify"
     depends_on:
       - backend
     command: npm run dev
