rebrand: Rename project from Deploy Manager to Ark Deploy
- Updated all package.json files with new name
- Changed docker-compose.yml container names and network
- Updated MongoDB database name to ark-deploy
- Changed Traefik domain to ark-deploy.IP.sslip.io
- Updated README.md with new project name and URLs
- Updated install.sh script with new branding
- Updated all documentation files (SYSTEM-UPDATE-FEATURE.md, VERSION-CONTROL.md)
- Updated frontend confirmation messages
- Changed all references from deploy-manager to ark-deploy

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "deploy-manager-backend",
+  "name": "ark-deploy-backend",
   "version": "1.0.0",
-  "description": "Sistema de gerenciamento de deploy multi-projeto",
+  "description": "Ark Deploy - Sistema de gerenciamento de deploy multi-projeto",
   "main": "dist/index.js",
   "scripts": {
     "dev": "set PORT=8001&& ts-node-dev --respawn --transpile-only src/index.ts",
