--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,81 @@
-node_modules
-npm-debug.log
-.git
-.gitignore
-README.md
+# Node modules
+node_modules/
+*/node_modules/
+**/node_modules/
+
+# Build outputs
+dist/
+build/
+.next/
+out/
+
+# Environment files
 .env
 .env.local
+.env.*.local
+backend/.env
+frontend/.env
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS
 .DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Git
+.git/
+.gitignore
+.gitattributes
+
+# Docker
+Dockerfile
+docker-compose.yml
+.dockerignore
+
+# Documentation
 *.md
-.vscode
-.idea
-coverage
-.next
-dist
-build
+docs/
+
+# MongoDB data
+data/
+mongo-data/
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+
+# Coverage
+coverage/
+.nyc_output/
+
+# TypeScript
+*.tsbuildinfo
+
+# Optional npm cache
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Backups
+*.backup
+.env.backup*
+
+# Scripts
+scripts/
+install*.sh
+update.sh
+Makefile
