fix: Remove deprecated swcMinify and add outputFileTracingRoot to next.config

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,6 @@ BASE_DOMAIN=sslip.io
 FRONTEND_URL=http://localhost:8000
 
 # GitHub OAuth (opcional)
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
+GITHUB_CLIENT_ID=Ov23liUAMV3RZp1pk9PH
+GITHUB_CLIENT_SECRET=ae184835a93a3a81c259ddc2f42cb8bc175a1b0a
 GITHUB_CALLBACK_URL=http://localhost:8000/auth/github/callback
