feat: Auto-detect TypeScript projects and fix PM2 syntax errors
- Added automatic TypeScript detection via tsconfig.json
- Generate proper Dockerfile for TypeScript backends using ts-node
- Fixed PM2 syntax errors when deploying TypeScript projects
- Added live logs viewer with real-time updates
- Improved Nginx proxy configuration
- Added diagnostic and cleanup scripts
- Fixed duplicate project name constraint
- Fixed Git branch checkout issues

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,29 +1,28 @@
+# Dockerfile para Backend do Ark Deploy
 FROM node:20-alpine
 
 # Instalar dependências do sistema
-RUN apk add --no-cache \
-    openssh-client \
-    git \
-    bash \
-    curl
+RUN apk add --no-cache python3 make g++
 
-# Criar diretório da aplicação
 WORKDIR /app
 
-# Copiar package files
+# Copiar arquivos de dependências
 COPY package*.json ./
 
-# Instalar dependências
-RUN npm ci --only=production
+# Instalar dependências (incluindo devDependencies para ts-node)
+RUN npm ci
 
 # Copiar código fonte
 COPY . .
 
-# Criar diretórios necessários
-RUN mkdir -p /opt/projects /opt/databases /opt/backups
+# Variáveis de ambiente padrão
+ENV NODE_ENV=production
+
+# A porta será definida via variável de ambiente no deploy
+ENV PORT=8000
 
 # Expor porta
-EXPOSE 8001
+EXPOSE 8000
 
-# Comando padrão
-CMD ["npm", "start"]
+# Usar ts-node para executar sem compilar (mais rápido para deploy)
+CMD ["npx", "ts-node", "--transpile-only", "src/index.ts"]
