--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
       - "8001:8001"
     depends_on:
       - mongodb
-    command: npm run build && npm start
+    command: sh -c "npm run build && PORT=8001 node dist/index.js"
 
   # Frontend
   frontend:
@@ -77,7 +77,7 @@ services:
       - "traefik.docker.network=coolify"
     depends_on:
       - backend
-    command: npm run build && npm start
+    command: sh -c "npm run build && npm start"
 
 networks:
   ark-deploy-network:
