--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,8 +11,14 @@ RUN npm install
 # Copiar código fonte
 COPY . .
 
+# Build para produção
+RUN npm run build
+
 # Expor porta
 EXPOSE 8000
 
-# Rodar em modo desenvolvimento (mais estável)
-CMD ["npm", "run", "dev"]
+# Variáveis de ambiente
+ENV NODE_ENV=production
+
+# Rodar em modo produção
+CMD ["npm", "start"]
