--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "set PORT=8001&& ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
+    "build:prod": "tsc --project tsconfig.prod.json || tsc --skipLibCheck --noEmit false",
     "start": "set PORT=8001&& node dist/index.js",
     "make-admin": "node scripts/make-admin.js",
     "seed-plans": "node scripts/seed-plans.js"
