--- a/backend/.env.example
+++ b/backend/.env.example
@@ -23,3 +23,8 @@ GITHUB_CLIENT_SECRET=your_github_client_secret
 # URLs do Frontend
 FRONTEND_URL=http://localhost:8000
 GITHUB_CALLBACK_URL=http://localhost:8000/auth/github/callback
+
+# Panel Deploy - GitHub
+PANEL_GIT_URL=https://github.com/AlbertoSB-Dev/deploy-manager.git
+PANEL_GIT_BRANCH=main
+PANEL_GIT_TOKEN=your_github_personal_access_token_here
