feat: add scripts to apply discount tiers to plans
- Create add-discount-tiers.js to add discounts to existing plans
- Create seed-plans-with-discounts.js to create new plans with discounts
- Add both scripts to package.json
- Create APLICAR-DESCONTOS.md guide with instructions
- Provide 3 options: seed new plans, add to existing, or manual config
- Include testing instructions and troubleshooting

--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "delete-project": "node scripts/delete-project.js",
     "clear-servers": "node scripts/clear-servers.js",
     "remove-unique-index": "node scripts/remove-unique-index.js",
-    "migrate-plans": "node scripts/migrate-plans.js"
+    "migrate-plans": "node scripts/migrate-plans.js",
+    "add-discount-tiers": "node scripts/add-discount-tiers.js",
+    "seed-plans-with-discounts": "node scripts/seed-plans-with-discounts.js"
   },
   "dependencies": {
     "archiver": "^6.0.1",
