feat: implement super admin role with elevated permissions
- Add super_admin role to User model (super_admin, admin, user)
- Create superAdmin middleware for super admin-only routes
- Update admin middleware to accept both admin and super_admin
- Create make-super-admin.js script to promote admin to super_admin
- Add script to package.json
- Create SUPER-ADMIN.md documentation with permissions and usage
- Super admin has access to payments, system settings, and audit logs
- Implement role-based access control throughout system

--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "remove-unique-index": "node scripts/remove-unique-index.js",
     "migrate-plans": "node scripts/migrate-plans.js",
     "add-discount-tiers": "node scripts/add-discount-tiers.js",
-    "seed-plans-with-discounts": "node scripts/seed-plans-with-discounts.js"
+    "seed-plans-with-discounts": "node scripts/seed-plans-with-discounts.js",
+    "make-super-admin": "node scripts/make-super-admin.js"
   },
   "dependencies": {
     "archiver": "^6.0.1",
