--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,11 +20,29 @@ SERVER_IP=localhost
 GITHUB_CLIENT_ID=your_github_client_id
 GITHUB_CLIENT_SECRET=your_github_client_secret
 
+# Google OAuth (para login)
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+
 # URLs do Frontend
 FRONTEND_URL=http://localhost:8000
 GITHUB_CALLBACK_URL=http://localhost:8000/auth/github/callback
+GOOGLE_CALLBACK_URL=http://localhost:8001/api/auth/google/callback
 
 # Panel Deploy - GitHub
 PANEL_GIT_URL=https://github.com/AlbertoSB-Dev/deploy-manager.git
 PANEL_GIT_BRANCH=main
 PANEL_GIT_TOKEN=your_github_personal_access_token_here
+
+# Assas (Pagamentos)
+ASSAS_API_KEY=your_assas_api_key_here
+ASSAS_WEBHOOK_TOKEN=your_webhook_secret_token_here
+
+# Email (Notificações)
+EMAIL_ENABLED=true
+EMAIL_SERVICE=gmail
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASSWORD=your_app_password_here
+
+# Renovação Automática
+SUBSCRIPTION_RENEWAL_ENABLED=true
