--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "make-super-admin": "node scripts/make-super-admin.js"
   },
   "dependencies": {
+    "@types/nodemailer": "^7.0.9",
     "archiver": "^6.0.1",
     "axios": "^1.13.4",
     "bcryptjs": "^2.4.3",
@@ -40,6 +41,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^4.2.1",
     "node-ssh": "^13.1.0",
+    "nodemailer": "^8.0.1",
     "simple-git": "^3.25.0",
     "socket.io": "^4.8.1",
     "ssh2": "^1.15.0",
