docs: Adiciona guias completos sobre configuração de credenciais do Assas com diagramas visuais

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -34,10 +34,30 @@ PANEL_GIT_URL=https://github.com/AlbertoSB-Dev/deploy-manager.git
 PANEL_GIT_BRANCH=main
 PANEL_GIT_TOKEN=your_github_personal_access_token_here
 
-# Assas (Pagamentos)
+# ===== ASSAS (GATEWAY DE PAGAMENTO) =====
+# Como obter: https://sandbox.asaas.com → Integrações → API Keys
+# Documentação completa: Ver arquivo ASSAS-CREDENCIAIS-GUIA.md
+
+# 1. API KEY - Token de autenticação para fazer requisições
+# Formato: $aact_YTU5YTE0M2M2N2I4MTliNzk0YTI5N2U5MzdjNWZmNDQ...
+# Onde encontrar: Painel Assas → Integrações → Chaves de API
 ASSAS_API_KEY=your_assas_api_key_here
+
+# 2. WEBHOOK TOKEN - Token secreto para validar webhooks
+# Formato: String aleatória que você define (ex: meu-token-secreto-123)
+# Onde configurar: Painel Assas → Integrações → Webhooks → Token de Autenticação
 ASSAS_WEBHOOK_TOKEN=your_webhook_secret_token_here
 
+# 3. ENVIRONMENT - Ambiente de execução
+# Valores: 'sandbox' (testes) ou 'production' (real)
+# Use 'sandbox' durante desenvolvimento e 'production' apenas quando estiver pronto
+ASSAS_ENVIRONMENT=sandbox
+
+# IMPORTANTE:
+# - Sandbox: https://sandbox.asaas.com (conta de teste, pagamentos simulados)
+# - Produção: https://www.asaas.com (conta real, pagamentos reais)
+# - NUNCA use a chave de produção em desenvolvimento!
+# - Configure o webhook no Assas apontando para: https://seu-dominio.com/api/payments/webhook
 # Email (Notificações)
 EMAIL_ENABLED=true
 EMAIL_SERVICE=gmail
