--- a/backend/tsconfig.prod.json
+++ b/backend/tsconfig.prod.json
@@ -7,7 +7,15 @@
     "noUnusedParameters": false,
     "noImplicitAny": false,
     "strictNullChecks": false,
+    "strictFunctionTypes": false,
+    "strictPropertyInitialization": false,
     "strict": false,
     "allowJs": true
+  },
+  "ts-node": {
+    "transpileOnly": true,
+    "compilerOptions": {
+      "module": "commonjs"
+    }
   }
 }
