feat: v1.5.0 - Sistema de detecção automática de atualizações via GitHub API

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ark-deploy",
-  "version": "1.0.0",
-  "description": "Ark Deploy - Sistema de gerenciamento de deploy multi-projeto",
+  "version": "1.5.0",
+  "description": "Ark Deploy - Sistema de gerenciamento de deploy multi-projeto com detecção automática de atualizações",
   "scripts": {
     "install:all": "npm install --prefix backend && npm install --prefix frontend",
     "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\"",
