fix: Add clean production .env template

--- a/.env.production
+++ b/.env.production
@@ -1,31 +1,30 @@
-# ============================================
-# ARK DEPLOY - PRODUCTION ENVIRONMENT
-# ============================================
-
 # MongoDB
-MONGO_PASSWORD=CHANGE_ME_STRONG_PASSWORD_HERE
+MONGO_PASSWORD=vQO20N8X8k41oRkAUWAEnw==
 
-# Security
-JWT_SECRET=CHANGE_ME_RANDOM_STRING_64_CHARS_MIN
-ENCRYPTION_KEY=CHANGE_ME_RANDOM_STRING_32_CHARS_MIN
+# Segurança
+JWT_SECRET=hxt8JpXUaEhzQ6VPZFVrhA0PvcbFDQoWvbYbRJEQYy0=
+ENCRYPTION_KEY=azl2vRfXO7sysIKrbiger8FurqHcXs0P6z0ZfIDqMJc=
 
-# Server Configuration
-SERVER_IP=YOUR_SERVER_IP_HERE
+# Servidor
+SERVER_IP=38.242.213.195
 BASE_DOMAIN=sslip.io
-DOMAIN=ark-deploy.YOUR_SERVER_IP.sslip.io
+FRONTEND_URL=http://painel.38.242.213.195.sslip.io
 
-# URLs
-FRONTEND_URL=http://YOUR_SERVER_IP:8000
-NEXT_PUBLIC_API_URL=http://YOUR_SERVER_IP:8001
+# API URL para o Frontend (IMPORTANTE!)
+NEXT_PUBLIC_API_URL=http://api.38.242.213.195.sslip.io/api
 
-# GitHub OAuth (Optional)
+# GitHub OAuth (configurar depois no painel)
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
-GITHUB_CALLBACK_URL=http://YOUR_SERVER_IP:8000/auth/github/callback
+GITHUB_CALLBACK_URL=http://painel.38.242.213.195.sslip.io/auth/github/callback
 
-# ============================================
-# GENERATE SECRETS WITH:
-# ============================================
-# JWT_SECRET: openssl rand -hex 64
-# ENCRYPTION_KEY: openssl rand -hex 32
-# MONGO_PASSWORD: openssl rand -base64 32
+# Assas (configurar pelo painel admin)
+ASSAS_API_KEY=
+ASSAS_WEBHOOK_TOKEN=
+ASSAS_ENVIRONMENT=sandbox
+
+# Email (opcional)
+EMAIL_ENABLED=false
+EMAIL_SERVICE=gmail
+EMAIL_USER=
+EMAIL_PASSWORD=
