feat: Centralizar variáveis de ambiente na raiz do projeto
- Atualizado .env.example com todas as variáveis necessárias
- Criado ENV-SETUP.md com documentação completa
- Criado migrate-env.sh para migração automática de .env antigos
- Criado check-env.sh para diagnóstico de configuração
- Criado GUIA-RAPIDO-VPS.md com guia passo a passo
- Atualizado README.md com seção de configuração e troubleshooting
- Documentado problema do Socket.IO com localhost
- Explicado diferença entre variáveis build-time e runtime

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,63 @@
-# MongoDB
+# ============================================
+# ARK DEPLOY - VARIÁVEIS DE AMBIENTE
+# ============================================
+# Este arquivo contém TODAS as variáveis necessárias
+# para backend e frontend em produção (Docker)
+# ============================================
+
+# ============================================
+# MONGODB
+# ============================================
 MONGO_PASSWORD=changeme123
 
-# Segurança (MUDE EM PRODUÇÃO!)
+# ============================================
+# SEGURANÇA
+# ============================================
 JWT_SECRET=your-secret-key-change-in-production
-ENCRYPTION_KEY=your-encryption-key-32-chars-minimum
+ENCRYPTION_KEY=your-encryption-key-32-chars-min
 
-# Servidor
+# ============================================
+# SERVIDOR
+# ============================================
 SERVER_IP=localhost
 BASE_DOMAIN=sslip.io
 FRONTEND_URL=http://localhost:8000
 
-# GitHub OAuth (opcional)
-GITHUB_CLIENT_ID=Ov23liUAMV3RZp1pk9PH
-GITHUB_CLIENT_SECRET=ae184835a93a3a81c259ddc2f42cb8bc175a1b0a
+# ============================================
+# FRONTEND (Next.js)
+# ============================================
+# IMPORTANTE: Esta variável é usada em BUILD TIME
+# Qualquer mudança requer rebuild do frontend
+NEXT_PUBLIC_API_URL=http://localhost:8001/api
+
+# ============================================
+# GITHUB OAUTH (Opcional)
+# ============================================
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
 GITHUB_CALLBACK_URL=http://localhost:8000/auth/github/callback
+
+# ============================================
+# ASSAS (Configurável pelo painel admin)
+# ============================================
+ASSAS_API_KEY=
+ASSAS_WEBHOOK_TOKEN=
+ASSAS_ENVIRONMENT=sandbox
+
+# ============================================
+# EMAIL (Opcional)
+# ============================================
+EMAIL_ENABLED=false
+EMAIL_SERVICE=gmail
+EMAIL_USER=
+EMAIL_PASSWORD=
+
+# ============================================
+# NOTAS IMPORTANTES
+# ============================================
+# 1. Em produção, substitua SERVER_IP pelo IP real da VPS
+# 2. NEXT_PUBLIC_API_URL deve apontar para a URL pública da API
+# 3. Gere JWT_SECRET e ENCRYPTION_KEY seguros:
+#    node -e "console.log(require('crypto').randomBytes(32).toString('base64'))"
+# 4. Configure Assas e GitHub OAuth pelo painel admin
+# ============================================
